tests/snapshots/tui_snapshots__detail_pane_groups_todos_by_phase_120x40.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                   ⚠ 1 needs you  ! "
"                                                                                                                        "
" ⌕ / to search                                                                                           12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────────────────┐"
"│  ID     PROJECT                                                 SIZE ││ 2026-08-28_Lullaby_Remix_ID0248              │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248                    scanning… ││ music-video   ·   projects                   │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247           scanning… ││ created 2026-08-28                           │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                        scanning… ││ scanning…   ·   no notes                     │"
"│  ID0245 2026-08-25_Test_Run_ID0245                         scanning… ││ 2/6 todos done                               │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244                  scanning… ││ ── tags ──────────────────────────────────── │"
"│  ID0243 2026-08-23_Live_Session_ID0243                     scanning… ││ ● draft                                      │"
"│  ID0242 2026-08-22_Lullaby_Remix_ID0242                    scanning… ││ · add a tag                                  │"
"│  ID0241 2026-08-21_Client_Onboarding_Acme_ID0241           scanning… ││ ── todo ──────────────────────────────────── │"
"│  ID0240 2026-08-20_Old_Shoot_ID0240                        scanning… ││ [x] read the order requirements              │"
"│  ID0239 2026-08-19_Test_Run_ID0239                         scanning… ││ Project Setup                            1/2 │"
"│  ID0238 2026-08-18_Spring_Campaign_ID0238                  scanning… ││   [x] download the client files, untouched   │"
"│  ID0237 2026-08-17_Live_Session_ID0237                     scanning… ││   [ ] copy the audio into the audio folder   │"
"│                                                                      ││ Creative Plan                            0/2 │"
"│                                                                      ││   [ ] listen to the full song                │"
"│                                                                      ││   [ ] choose mood, theme and search terms    │"
"│                                                                      ││ Main Edit                                0/1 │"
"│                                                                      ││   [ ] edit the first minute, then rewatch    │"
"│                                                                      ││ · add a todo                                 │"
"│                                                                      ││ · add a phase                                │"
"│                                                                      ││ ── notes ─────────────────────────────────── │"
"│                                                                      ││ · add a note                                 │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
"                                                                                                                        "
" / search  a actions  Enter toggle  F2 edit  + add  ← list  ? help                                                      "
