tests/snapshots/tui_snapshots__detail_pane_wraps_a_long_note_and_todo_120x40.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                   ⚠ 1 needs you  ! "
"                                                                                                                        "
" ⌕ / to search                                                                                           12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────────────────┐"
"│  ID     PROJECT                                                 SIZE ││ 2026-08-28_Lullaby_Remix_ID0248              │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248                    scanning… ││ music-video   ·   projects                   │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247           scanning… ││ created 2026-08-28                           │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                        scanning… ││ scanning…   ·   1 note                       │"
"│  ID0245 2026-08-25_Test_Run_ID0245                         scanning… ││ 0/1 todos done                               │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244                  scanning… ││ ── tags ──────────────────────────────────── │"
"│  ID0243 2026-08-23_Live_Session_ID0243                     scanning… ││ ● draft                                      │"
"│  ID0242 2026-08-22_Lullaby_Remix_ID0242                    scanning… ││ · add a tag                                  │"
"│  ID0241 2026-08-21_Client_Onboarding_Acme_ID0241           scanning… ││ ── todo ──────────────────────────────────── │"
"│  ID0240 2026-08-20_Old_Shoot_ID0240                        scanning… ││ [ ] send the rough cut to the label and ask  │"
"│  ID0239 2026-08-19_Test_Run_ID0239                         scanning… ││     whether the lyric video is in scope      │"
"│  ID0238 2026-08-18_Spring_Campaign_ID0238                  scanning… ││ · add a todo                                 │"
"│  ID0237 2026-08-17_Live_Session_ID0237                     scanning… ││ · add a phase                                │"
"│                                                                      ││ ── notes ─────────────────────────────────── │"
"│                                                                      ││ 2026-09-11 the client wants the second verse │"
"│                                                                      ││            recut around the new vocal take,  │"
"│                                                                      ││            with the chorus lights left as    │"
"│                                                                      ││            they were on Friday               │"
"│                                                                      ││            then colour                       │"
"│                                                                      ││ · add a note                                 │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
"                                                                                                                        "
" / search  a actions  o open  t terminal  y copy path  Space mark  n new  T templates  → pane  ? help  c commands       "
