tests/snapshots/tui_snapshots__from_folder_preview.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search the templates                                                                    3/3 "
"┌ templates ─────────────────────────┐┌ client-project ────────────────────────────────────────────┐"
"│  client-project    4               ││ reading…                                                   │"
"│  general           4               ││                                                            │"
"│  music-vid┌ template from a folder · preview ────────────────────────────────────────┐           │"
"│           │ → reference                                                              │           │"
"│           │                                                                          │           │"
"│           │ └── 01_Assets/                                                           │           │"
"│           │     └── raw/                                                             │           │"
"│           │                                                                          │           │"
"│           │ Files                                                                    │           │"
"│           │   · README.md                                                            │           │"
"│           │                                                                          │           │"
"│           │ Bundled byte for byte                                                    │           │"
"│           │   · 01_Assets/logo.png   24.0 KB                                         │           │"
"│           │                                                                          │           │"
"│           │ 2 folders, 1 text file   1 bundled (24.0 KB)                             │           │"
"│           │                                                                          │           │"
"│           │ Enter generates it   Esc back to the answers   ↑↓ scroll                 │           │"
"│           └──────────────────────────────────────────────────────────────────────────┘           │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"└────────────────────────────────────┘└────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
