tests/snapshots/tui_snapshots__guide_naming_page.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                   ⚠ 1 needs you  ! "
"                                                                                                                        "
" ⌕ / to se┌ template guide · Naming your projects ───────────────────────────────────────────────────────────┐      3/3 "
"┌ template│ The naming pattern is the rule that turns your answers into a folder name. It is plain text with │─────────┐"
"│  client-│ {tokens} in it, and each token is replaced when the project is created.                          │         │"
"│  general│                                                                                                  │         │"
"│  music-v│ pattern   {date}_{artist}_{title}_{id}                                                           │         │"
"│         │ becomes   2026-01-31_Ariana_Grande_Seeping_ID0001                                                │         │"
"│         │                                                                                                  │         │"
"│         │ The tokens you can use                                                                           │         │"
"│         │ {date}   the date, as your date format writes it                                                 │         │"
"│         │ {YYYY}   {MM}   {DD}   the year, month and day                                                   │         │"
"│         │ {id}     the project's number, e.g. ID0001                                                       │         │"
"│         │ {slug}   the answer to the variable called slug                                                  │         │"
"│         │                                                                                                  │         │"
"│         │ The ID                                                                                           │         │"
"│         │ Every project gets a number that is unique across your whole library — not per template — so two │         │"
"│         │ projects from two different templates never share one. You choose the prefix and how many digits │         │"
"│         │ it is padded to, between 1 and 12.                                                               │         │"
"│         │                                                                                                  │         │"
"│         │ The prefix cannot be empty: adopting an existing folder recovers its number by looking for the   │         │"
"│         │ prefix followed by digits, and with no prefix that match is any trailing number at all —         │         │"
"│         │ Album_2024 would come in as ID 2024.                                                             │         │"
"│         │                                                                                                  │         │"
"│         │ Two mistakes worth knowing                                                                       │         │"
"│         │ A token no variable answers is left in the folder name exactly as you wrote it, braces and all — │         │"
"│         │ {clientname} typed for a variable called client_name.                                            │         │"
"│         │                                                                                                  │         │"
"│         │ A variable the pattern never uses is the expensive one: the question is asked, the answer is     │         │"
"│         │ recorded, and every project from the template still comes out with the same folder name.         │         │"
"│         │                                                                                                  │         │"
"│         │ The editor names both as you type, and marks the Metadata row. Neither stops a save — both are   │         │"
"│         │ legal templates, they are just almost never what was meant.                                      │         │"
"│         │ page 3 of 7                                                                                      │         │"
"│         │ Esc close   → next page   ← back   ↑↓ scroll                                                     │         │"
"│         └──────────────────────────────────────────────────────────────────────────────────────────────────┘         │"
"└───────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
"                                                                                                                        "
