tests/snapshots/tui_snapshots__guide_offered_on_the_first_visit.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                   ⚠ 1 needs you  ! "
"                                                                                                                        "
" ⌕ / to se┌ template guide · What a template is ─────────────────────────────────────────────────────────────┐      3/3 "
"┌ template│ A template is a folder that describes a project. Making a project from one asks you a few        │─────────┐"
"│  client-│ questions, then writes the folders and the files, with your answers already filled in.           │         │"
"│  general│                                                                                                  │         │"
"│  music-v│ It is an ordinary directory in fastf's own templates folder, so a template is shared by copying  │         │"
"│         │ a folder. Two are installed for you; this guide is about writing your own.                       │         │"
"│         │                                                                                                  │         │"
"│         │ templates/music-video/                                                                           │         │"
"│         │    template.yaml      the questions and the naming rule                                          │         │"
"│         │    files/             copied into every project                                                  │         │"
"│         │       SHOTLIST.md     with {artist} filled in                                                    │         │"
"│         │                                                                                                  │         │"
"│         │ What is in this guide                                                                            │         │"
"│         │   The five parts of a template, and how the editor is laid out                                   │         │"
"│         │   Naming your projects: the pattern, the tokens and the ID                                       │         │"
"│         │   The questions to ask: variables, choices and transforms                                        │         │"
"│         │   Folders and files: what gets written, and what gets filled in                                  │         │"
"│         │   A walkthrough that builds a real template from nothing                                         │         │"
"│         │   What happens after you save                                                                    │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │                                                                                                  │         │"
"│         │ page 1 of 7                                                                                      │         │"
"│         │ Esc close   → next page   ← back   ↑↓ scroll                                                     │         │"
"│         └──────────────────────────────────────────────────────────────────────────────────────────────────┘         │"
"└───────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
"                                                                                                                        "
