tests/snapshots/tui_snapshots__guide_walkthrough_page.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                                             highest ID0248 "
" → projects 12   archive not mounted                                                                   ⚠ 1 needs you  ! "
"                                                                                                                        "
" ⌕ / to se┌ template guide · Build your first template ──────────────────────────────────────────────────────┐      3/3 "
"┌ template│ A complete template, from nothing, in the order the editor lists its parts. It makes dated,      │─────────┐"
"│  client-│ numbered folders for a music video, and it takes about a minute.                                 │         │"
"│  general│                                                                                                  │         │"
"│  music-v│ 1. Metadata                                                                                      │         │"
"│         │ Open Metadata and fill in three of the four lines:                                               │         │"
"│         │ Name             Music Video                                                                     │         │"
"│         │ Slug             music-video                                                                     │         │"
"│         │ Naming pattern   {date}_{artist}_{title}_{id}                                                    │         │"
"│         │                                                                                                  │         │"
"│         │ The slug follows the name until you type one of your own. Leave the pattern's warning for now —  │         │"
"│         │ the variables it names do not exist yet.                                                         │         │"
"│         │                                                                                                  │         │"
"│         │ 2. ID                                                                                            │         │"
"│         │ The defaults are ID and 4, which give you ID0001. Nothing to change unless you want your own     │         │"
"│         │ prefix.                                                                                          │         │"
"│         │                                                                                                  │         │"
"│         │ 3. Variables                                                                                     │         │"
"│         │ a adds one. Add two, then a third:                                                               │         │"
"│         │ artist   Artist / band name   text     required                                                  │         │"
"│         │          transform: TitleUnderscore                                                              │         │"
"│         │ title    Project title        text     required                                                  │         │"
"│         │          transform: TitleUnderscore                                                              │         │"
"│         │ kind     Client / Personal    select                                                             │         │"
"│         │          options: Client, Personal                                                               │         │"
"│         │                                                                                                  │         │"
"│         │ The Metadata warning clears as soon as the pattern's tokens and the variables agree.             │         │"
"│         │                                                                                                  │         │"
"│         │ 4. Structure                                                                                     │         │"
"│         │ One folder per line. The tree beside it redraws as you type.                                     │         │"
"│         │ 01_Assets/Audio                                                                                  │         │"
"│         │ page 6 of 7                                                                                      │         │"
"│         │ Esc close   → next page   ← back   ↑↓ scroll                                                     │         │"
"│         └──────────────────────────────────────────────────────────────────────────────────────────────────┘         │"
"└───────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────┘"
"                                                                                                                        "
"                                                                                                                        "
