tests/snapshots/tui_snapshots__help_80x24.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                     highest ID0248 "
" →┌ help · project list ─────────────────────────────────────────────────────┐! "
" ⌕│ Navigate                                                                 │t "
"┌ │   Ctrl-z         Suspend                                                 │─┐"
"│ │                  give the terminal back to the shell, as Ctrl-Z does in  │ │"
"│▸│                  any program — `fg` brings fastf back                    │ │"
"│ │   Tab            Next pane                                               │ │"
"│ │                  move focus between the list and its pane — on the       │ │"
"│ │                  messages and log screen, turn the page                  │ │"
"│ │   Shift-Tab      Previous pane                                           │ │"
"│ │                  move focus the other way                                │ │"
"│ │   ↓ / j          Down                                                    │ │"
"│ │                  next row, or scroll down (stops at the end)             │ │"
"│ │   ↑ / k          Up                                                      │ │"
"│ │                  previous row, or scroll up (stops at the top)           │ │"
"│ │   PgDn           Page down                                               │ │"
"│ │                  a screenful down (stops at the end)                     │ │"
"│ │   PgUp           Page up                                                 │ │"
"│ │                  a screenful up (stops at the top)                       │ │"
"│ │   Ctrl-d         Half a page down                                        │ │"
"│ │                  half a screenful down (stops at the end)                │ │"
"└─└──────────────────────────────────────────────────────────────────────────┘─┘"
"                                                                                "
" ↑↓ scroll  Esc close  ? help  c commands                                       "
