tests/snapshots/tui_snapshots__help_open.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"        ┌ help · project list ─────────────────────────────────────────────────────────────┐        "
" ⌕ / to │ Navigate                                                                         │ newest "
"┌ projec│   Ctrl-z         Suspend                           give the terminal back to the │───────┐"
"│  ID   │                                                    shell, as Ctrl-Z does in any  │D0248  │"
"│▸ ID024│                                                    program — `fg` brings fastf   │       │"
"│  ID024│                                                    back                          │       │"
"│  ID024│   Tab            Next pane                         move focus between the list   │       │"
"│  ID024│                                                    and its pane — on the messages│────── │"
"│  ID024│                                                    and log screen, turn the page │       │"
"│  ID024│   Shift-Tab      Previous pane                     move focus the other way      │       │"
"│  ID024│   ↓ / j          Down                              next row, or scroll down      │       │"
"│  ID024│                                                    (stops at the end)            │       │"
"│  ID024│   ↑ / k          Up                                previous row, or scroll up    │       │"
"│  ID023│                                                    (stops at the top)            │       │"
"│  ID023│   PgDn           Page down                         a screenful down (stops at the│       │"
"│  ID023│                                                    end)                          │       │"
"│       │   PgUp           Page up                           a screenful up (stops at the  │       │"
"│       │                                                    top)                          │       │"
"│       │   Ctrl-d         Half a page down                  half a screenful down (stops  │       │"
"│       │                                                    at the end)                   │       │"
"│       │   Ctrl-u         Half a page up                    half a screenful up (stops at │       │"
"│       │                                                    the top)                      │       │"
"│       │   Home / g       First row                         jump to the top               │       │"
"│       │   End / G        Last row                          jump to the bottom            │       │"
"│       │   i              Toggle the detail pane            show or hide the detail pane  │       │"
"└───────└──────────────────────────────────────────────────────────────────────────────────┘───────┘"
"                                                                                                    "
" ↑↓ scroll  Esc close  ? help  c commands                                                           "
