tests/snapshots/tui_snapshots__id_counter.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ music-video   ·   projects       │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ created 2026-08-28               │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                scanning… ││ scanning…                        │"
"│  ID0245 2026-08-25_Test_Run_ID0245                 scanning… ││ ── tags ──────────────────────── │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244          scanning… ││ ● draft                          │"
"│  ID0243 2026-08-2┌ ID counter ────────────────────────────────────────────────┐                  │"
"│  ID0242 2026-08-2│ Raise the counter to (the next project will be this + 1; it│                  │"
"│  ID0241 2026-08-2│ is 248 now)                                                │                  │"
"│  ID0240 2026-08-2│                                                            │                  │"
"│  ID0239 2026-08-1│ 248                                                        │                  │"
"│  ID0238 2026-08-1│                                                            │                  │"
"│  ID0237 2026-08-1│                                                            │                  │"
"│                  └────────────────────────────────────────────────────────────┘                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
" Enter confirm  Esc cancel  F1 help  Ctrl-p commands                                                "
