tests/snapshots/tui_snapshots__job_progress.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                 12/12 · newest · 3 ✓ "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0245 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-25_Test_Run_ID0245       │"
"│✓ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ music-video   ·   projects       │"
"│✓ ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ created 2026-08-25               │"
"│✓ ID0246 2026-08-26_Old_Shoot_ID0246                scanning… ││ scanning…                        │"
"│▸ ID0245 2026-08-25_Test_Run_ID0245                 scanning… ││ ── tags ──────────────────────── │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244          scanning… ││ ● draft                          │"
"│  ID0243 2026-0┌ unregistering ───────────────────────────────────────────────────┐               │"
"│  ID0242 2026-0│ unregistering 1 of 3                                             │               │"
"│  ID0241 2026-0│ ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░   0% │               │"
"│  ID0240 2026-0│ 2026-08-28_Lullaby_Remix_ID0248                                  │               │"
"│  ID0239 2026-0│                                                                  │               │"
"│  ID0238 2026-0│ Esc or Ctrl-C cancels — the rest stay marked                     │               │"
"│  ID0237 2026-0└──────────────────────────────────────────────────────────────────┘               │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
" ◜ unregistering…                                                                                   "
" / search  a actions  o open  t terminal  y copy path  Space mark  n new  T templates  → pane       "
